--- a/app/src/main/res/layout/content_splash_screen.xml
+++ b/app/src/main/res/layout/content_splash_screen.xml
@@ -19,5 +19,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/mutantes-2" />
+        app:srcCompat="@drawable/mutantes"
+        android:contentDescription="Mutantes" />
 </android.support.constraint.ConstraintLayout>
