--- a/app/src/main/res/layout/content_cadastro.xml
+++ b/app/src/main/res/layout/content_cadastro.xml
@@ -33,7 +33,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
-        android:onClick="salvar"
+        android:onClick="adicionar"
         android:text="Salvar"
         app:layout_constraintBottom_toBottomOf="@+id/nome"
         app:layout_constraintEnd_toEndOf="parent"
