--- a/app/src/main/res/layout/activity_editar.xml
+++ b/app/src/main/res/layout/activity_editar.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Pesquisar">
+    tools:context=".Editar">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
@@ -12,9 +12,10 @@
         android:theme="@style/AppTheme.AppBarOverlay">
 
 
+
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_pesquisar" />
+    <include layout="@layout/content_editar" />
 
 
 </android.support.design.widget.CoordinatorLayout>
